--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   ci:
@@ -11,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, "3.10", 3.11, 3.12, 3.13, 3.13t, 3.14]
-        dep-versions: [--frozen, "--resolution lowest", "--resolution highest"]
+        dep-versions: [--frozen, "--resolution lowest", "--resolution highest --upgrade"]
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
