--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,9 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
-      - run: |
-          uv build --sdist --wheel
-          rm -vf dist/.gitignore  # https://github.com/astral-sh/uv/issues/11652
+      - run: uv build --sdist --wheel
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
